Fixed bugs and text wrap and changed css of one of the two buttons

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,14 +1,13 @@
 #header {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: space-around;
   width: 100%;
   height: 400px;
   flex-direction: column;
   background-color: #e8a600;
   background-image: url("https://www.transparenttextures.com/patterns/black-mamba.png");
   color: #FFFFFF;
-  
 }
 
 #avatar {
