--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -33,6 +33,9 @@
   justify-content: center;
 }
 
+#new-tweet {
+  white-space: nowrap;
+}
 textarea {
   overflow-wrap: break-word;
 }
